<resources>
    <string name="app_name">Ishi Smart</string>
    <string name="home">Home</string>
    <string name="morning_tea">Morning Tea</string>
    <string name="location">LOCATION</string>
    <string name="mobile">MOBILE</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="daily_posters">Daily Posters</string>
</resources>