<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/top_view"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_margin="@dimen/_5sdp"
            android:enabled="false"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_tv"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/home"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/morning_tea_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/morning_tea"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/home_tv"
            app:layout_constraintTop_toBottomOf="@id/home_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/morning_tea_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/morning_tea_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/daily_posters_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/daily_posters"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/home_tv"
            app:layout_constraintTop_toBottomOf="@id/morning_tea_recyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/daily_posters_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daily_posters_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>