<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PublisherProfile">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/top_view"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_margin="@dimen/_5sdp"
        android:enabled="false"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_5sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_arrow_back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/user_icon"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        app:srcCompat="@drawable/ic_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/editor_display_name"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/user_icon"
        app:layout_constraintStart_toStartOf="@id/user_icon"
        app:layout_constraintTop_toBottomOf="@id/user_icon" />

    <View
        android:id="@+id/divider"
        style="@style/horizontal_divider"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/editor_display_name"
        app:layout_constraintStart_toStartOf="@id/editor_display_name"
        app:layout_constraintTop_toBottomOf="@id/editor_display_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/location_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_5sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_location_on"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/location"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/location_tv"
        app:layout_constraintStart_toEndOf="@id/location_btn"
        app:layout_constraintTop_toTopOf="@id/location_btn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@id/location_btn"
        app:layout_constraintStart_toEndOf="@id/location_btn"
        app:layout_constraintTop_toBottomOf="@id/location_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mobile_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_5sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_phone"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_btn"
        app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mobile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/mobile"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mobile_tv"
        app:layout_constraintStart_toEndOf="@id/mobile_btn"
        app:layout_constraintTop_toTopOf="@id/mobile_btn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mobile_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@id/mobile_btn"
        app:layout_constraintStart_toEndOf="@id/mobile_btn"
        app:layout_constraintTop_toBottomOf="@id/mobile_title" />

    <com.google.android.material.chip.Chip
        android:id="@+id/show_more_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/recent_activities"
        app:chipBackgroundColor="@color/primaryBg"
        app:chipIcon="@drawable/ic_timeline"
        app:chipIconTint="@color/colorPrimary"
        app:chipStrokeColor="@color/colorPrimary"
        app:chipStrokeWidth="@dimen/_1sdp"
        app:iconStartPadding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/top_view_activities"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_margin="@dimen/_5sdp"
        android:enabled="false"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_more_btn" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_view_activities"
        app:tabGravity="center"
        app:tabRippleColor="@null" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/activities_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>